--- a/RetryPoc/appsettings.Development.json
+++ b/RetryPoc/appsettings.Development.json
@@ -9,6 +9,8 @@
     "PostgreSqlConnectionString": "from user secrets",
     "AzureServiceBusConnectionString": "from user secrets",
     "NewServiceRequestsTopicName": "workload-service-requests-poc",
-    "RequestsChangeStatisTopicName": "workload-requests-change-status-poc"
+    "RequestsChangeStatisTopicName": "workload-requests-change-status-poc",
+    "RetryCount": 5,
+    "RetryIntervalSec": 10
   }
 }
