--- a/RetryPoc/RetryPoc.csproj
+++ b/RetryPoc/RetryPoc.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="DotNetCore.CAP.PostgreSql" Version="7.1.4" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.8" />
+    <PackageReference Include="Serilog.AspNetCore" Version="7.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
