--- a/RetryPoc/appsettings.Development.json
+++ b/RetryPoc/appsettings.Development.json
@@ -9,8 +9,9 @@
     "PostgreSqlConnectionString": "from user secrets",
     "AzureServiceBusConnectionString": "from user secrets",
     "NewServiceRequestsTopicName": "workload-service-requests-poc",
-    "RequestsChangeStatisTopicName": "workload-requests-change-status-poc",
+    "RequestsChangeStatusTopicName": "workload-requests-change-status-poc",
     "RetryCount": 5,
-    "RetryIntervalSec": 10
+    "RetryIntervalSec": 10,
+    "DelayedMessagesIntervalSec": 10
   }
 }
